--- a/WindowsClient/VirtualCardBoardClient/Properties/Resources.resx
+++ b/WindowsClient/VirtualCardBoardClient/Properties/Resources.resx
@@ -114,4 +114,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="StartForm_buttonFromStart_Click_Device_Not_Selected" xml:space="preserve">
+    <value>First you should select virtual crad board device (:</value>
+  </data>
 </root>
